--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'roboto',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: "..assets/images/bg-image-1.jpg";
+  /* -moz-osx-font-smoothing: grayscale; */
+  /* background-color: black; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font: inherit;
+  font-size: 4rem;
+  /* font-weight: 100; */
+  /* color: white */
+}
+
+h3, h4 {
+  font: inherit;
+}
+
+.input-field {
+  border: none;
+  border-bottom:0.15rem solid black ;
+  width: 20rem;
+}
+
+.input-field:focus {
+  outline: none;
+  font-size: 3rem;
 }
