--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body {
+html, body, .App {
+  height: 100vh;
+  width: 100vw;
+  padding: 0;
   margin: 0;
   font-family: 'roboto',
     sans-serif;
@@ -14,21 +17,47 @@ code {
 h1 {
   font: inherit;
   font-size: 4rem;
-  /* font-weight: 100; */
-  /* color: white */
+  font-weight: 100;
+  padding: 0.5rem 0.5rem;
+  color: white;
+  background-color: black;
+  opacity: 0.5;
 }
 
 h3, h4 {
   font: inherit;
 }
 
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .input-field {
   border: none;
-  border-bottom:0.15rem solid black ;
+  border-bottom:0.15rem solid white;
+  color: white;
   width: 20rem;
+  background: none;
+}
+
+.name-page-button {
+  padding: 0.5rem 1.5rem;
+  background-color: black;
+  color: white;
+  border-radius: 0.25rem;
+  border: none;
+  opacity: 0.8;
+  cursor: pointer;
+  transition: 0.5ms;
+}
+
+.name-page-button:hover {
+  padding: 0.6rem 1.6rem;
 }
 
 .input-field:focus {
   outline: none;
-  font-size: 3rem;
+  font-size: 2rem;
 }
