--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,23 @@ h3, h4 {
   border: none;
   border-bottom:0.15rem solid black ;
   width: 20rem;
+  background: none;
+  height: 3rem;
+}
+
+.name-page-button {
+  padding: 0.5rem 1.5rem;
+  background-color: black;
+  color: white;
+  border-radius: 0.25rem;
+  border: none;
+  opacity: 0.8;
+  cursor: pointer;
+  transition: 0.5ms;
+}
+
+.name-page-button:hover {
+  padding: 0.6rem 1.6rem;
 }
 
 .input-field:focus {
