--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html, body, .App {
+html, body, .app-component {
   height: 100vh;
   width: 100vw;
   padding: 0;
@@ -28,8 +28,9 @@ h3, h4 {
   font: inherit;
 }
 
-.App {
+.app-component {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -54,6 +55,12 @@ h3, h4 {
   transition: 0.5ms;
 }
 
+.name-form{
+  display: flex;
+  flex-direction: column;
+align-items: center;
+}
+
 .name-page-button:hover {
   padding: 0.6rem 1.6rem;
 }
@@ -61,4 +68,10 @@ h3, h4 {
 .input-field:focus {
   outline: none;
   font-size: 2rem;
+}
+
+.welcome-message-component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
