--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,15 @@ h1 {
   opacity: 0.5;
 }
 
-h3, h4 {
+h2, h3 {
   font: inherit;
+  color: white;
+  font-size: 2rem
+}
+
+h4 {
+  font-size: 1.2rem;
+  color: white;
 }
 
 .app-component {
@@ -74,4 +81,18 @@ align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.quote {
+  background-color: black;
+  opacity: 0.7;
+}
+
+.time-component {
+  display: inline-block;
+  background-color: black;
+  font-size: 3rem;
+  color: white;
+  padding: 0.5rem 0.5rem;
+  opacity: 0.8;
 }
