--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ h4 {
   height: 3rem;
 }
 
-.name-page-button {
+.focus-button {
   padding: 0.75rem 2rem;
   margin: 0.5rem 0;
   background-color: black;
@@ -66,7 +66,7 @@ h4 {
 align-items: center;
 }
 
-.name-page-button:hover {
+.focus-button:hover {
  background-color: white;
  /* border: 1px solid black; */
  color: black;
